objects/nDESIGN__View__c.object
<CustomObject>
    <fields>
        <fullName>nDESIGN__Edit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Edit the contents of this field using the WSYIWYG editor built into the Screen View object page. Do not cut-and-paste text into this field from another editor. Do not copy text from the read-only view of the page into the edit view.</inlineHelpText>
        <label>Edit</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Preview__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Edit the contents of this field using the WSYIWYG editor built into the Screen View object page. Do not cut-and-paste text into this field from another editor. Do not copy text from the read-only view of the page into the edit view.</inlineHelpText>
        <label>Preview</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nDESIGN__Read_Only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Edit the contents of this field using the WSYIWYG editor built into the Screen View object page. Do not cut-and-paste text into this field from another editor. Do not copy text from the read-only view of the page into the edit view.</inlineHelpText>
        <label>Read Only</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nDESIGN__lookupKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>-D Screen View</label>
    <listViews>
        <fullName>nDESIGN__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VIEW-{000000000}</displayFormat>
        <label>View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Screen Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>